change sup/inf defenition to suit lecture definition over Zorich's one

--- a/1.md
+++ b/1.md
@@ -13,8 +13,8 @@
 $(a = \max X) \coloneqq (a \in X \land \forall x \ in X (x \leq a))$
 $(a = \min X) \coloneqq (a \in X \land \forall x \ in X (a \leq x))$
 
-$(s = \sup X) \coloneqq \forall x \in X ((x \leq s) \land (\forall s' < s \exists x' \in X (s' < x')))$
-$(i = \inf X) \coloneqq \forall x \in X ((i \leq x) \land (\forall i' > i \exists x' \in X (x' < i')))$
+$(s = \sup X) \coloneqq \forall x \in X ((x \leq s) \land (\forall \varepsilon > 0 \exists x' \in X (x' > s - \varepsilon)))$
+$(i = \inf X) \coloneqq \forall x \in X ((i \leq x) \land (\forall \varepsilon > 0 \exists x' \in X (i+\varepsilon>x')))$
 или 
 $\sup X \coloneqq min \{c \in\ \mathbb{R} | \forall x \in X (x \leq c)\}$
 $\inf X \coloneqq max \{c \in\ \mathbb{R} | \forall x \in X (c \leq x)\}$
