add properties of sup and inf

--- a/1.md
+++ b/1.md
@@ -10,14 +10,110 @@
 Множество, ограниченное и сверху и снизу, называется ограниченным.
 
 # Точная верхняя и точная нижняя грани числового множества
-$(a = \max X) \coloneqq (a \in X \land \forall x \ in X (x \leq a))$
-$(a = \min X) \coloneqq (a \in X \land \forall x \ in X (a \leq x))$
+$(a = \max X) \coloneqq (a \in X \land \forall x \in X (x \leq a))$
+$(a = \min X) \coloneqq (a \in X \land \forall x \in X (a \leq x))$
 
 $(s = \sup X) \coloneqq \forall x \in X ((x \leq s) \land (\forall \varepsilon > 0 \exists x' \in X (x' > s - \varepsilon)))$
 $(i = \inf X) \coloneqq \forall x \in X ((i \leq x) \land (\forall \varepsilon > 0 \exists x' \in X (i+\varepsilon>x')))$
 или 
 $\sup X \coloneqq min \{c \in\ \mathbb{R} | \forall x \in X (x \leq c)\}$
 $\inf X \coloneqq max \{c \in\ \mathbb{R} | \forall x \in X (c \leq x)\}$
+### Свойства sup и inf
+#### 1
+$\sup {(A)}=-\inf {(-A)}$
+
+**Доказательство**
+Пусть $\sup A = s$,  докажем, что $\inf {(-A)} = -s$.
+1) $\forall x \in -A$ $x = -y$, где $y \in A$
+Тогда $y \leq s$.
+Следовательно, $x=-y\geq -s$.
+2) Пусть $\varepsilon > 0$ - произвольное.
+Тогда $\exists y \in A: y > s-\varepsilon$.
+Но тогда $\exists  x = -y \in -A$: $x=-y<-s+\varepsilon$
+Следовательно, $-s = \inf{(-A)}$.
+
+#### 2
+$\inf (A+B) = \inf A + \inf B$
+$A+B=\{x+y|x\in A, y \in B\}$
+
+**Доказательство**
+Пусть $a = \inf A, b=\inf B$.
+1) Пусть $z = x+y \in A+B$ - произвольное.
+$\forall x \in A \forall y \in B x\geq a, y \geq b$, 
+значит $z=x+y\geq a+b$.
+2) Пусть $\varepsilon >0$ - произвольное.
+Тогда $\exists x' \in A: x' < a+\varepsilon$ и $\exists y' \in B: y' < b+\varepsilon$.
+Тогда $\exists z' \in A+B: z=x' + y' < a+b +2\varepsilon$.
+
+#### 3
+$\sup{(A+B)}=\sup A + \sup B$
+$A+B=\{x+y|x\in A, y \in B\}$
+
+**Доказательство**
+Пусть $a=\sup A, b=\sup B$.
+1) Пусть z =x+y \in A+B$ - произвольное.
+$\forall x \in A \forall y \in B x \leq a, y\leq b$
+значит $z=x+y \leq a+b$.
+2) Пусть $\varepsilon >0$ - произвольное.
+Тогда $\exists x'\in A: x' > a - \varepsilon$ и $\exists y' \in B: y' > b-\varepsilon$.
+Тогда $\exists z' \in A+B: z'=x'+y'>a+b-2\varepsilon$.
+
+#### 4
+$\inf AB = \inf A \cdot \inf B$
+$AB=\{ xy | x \geq 0 \in A, y\geq 0 \in B\}$
+
+**Доказательство**
+Пусть $a=\inf A, b=\inf B$.
+**1)** $a>0, b>0$
+1. Пусть $z=xy \in AB$ - произвольное.
+$\forall x \in A \forall y \in B x\geq a, y \geq b$
+значит $z=xy\geq ab$
+2. Пусть $\varepsilon >0, \varepsilon_1 > 0, \varepsilon_2 > 0$ - произвольные.
+Тогда $\exists x' \in A: x'<a+\varepsilon_1$ и  $\exists y' \in A: y'<b+\varepsilon_2$.
+Тогда $\exists z' \in AB: z'=x'y'<(a+\varepsilon_1)(b+\varepsilon_2)=ab+a\varepsilon_2+b\varepsilon_1+\varepsilon_1 \varepsilon_2\leq ab+\varepsilon$,
+если выбрать $\varepsilon_1$ и $\varepsilon_2$ так, чтобы $a\varepsilon_2+b\varepsilon_1+\varepsilon_1 \varepsilon_2\leq \varepsilon$.
+Выберем $\varepsilon_1 = \min \{\frac{\varepsilon}{4b}; \sqrt{\frac{\varepsilon}{2}}\}$, $\varepsilon_2 = \max \{\frac{\varepsilon}{4a}; \sqrt{\frac{\varepsilon}{2}}\}$.
+
+**2)** $a=0, b>0$
+1. Пусть $z=xy \in AB$ - произвольное.
+$\forall x \in A \forall y \in B x\geq a, y \geq b$
+значит $z=xy\geq ab=0$
+2. Пусть $\varepsilon >0, \varepsilon_1 > 0, \varepsilon_2 > 0$ - произвольные.
+Тогда $\exists x' \in A: x'<a+\varepsilon_1=\varepsilon_1$ и  $\exists y' \in A: y'<b+\varepsilon_2$.
+Тогда $\exists z' \in AB: z'=x'y'<\varepsilon_1(b+\varepsilon_2)=b\varepsilon_1+\varepsilon_1 \varepsilon_2\leq\varepsilon$,
+если выбрать $\varepsilon_1$ и $\varepsilon_2$ так, чтобы $b\varepsilon_1+\varepsilon_1 \varepsilon_2\leq \varepsilon$.
+Выберем $\varepsilon_1 = \min \{\frac{\varepsilon}{2b}; \sqrt{\frac{\varepsilon}{2}}\}$, $\varepsilon_2 =\sqrt{\frac{\varepsilon}{2}}$.
+
+**3)** $a=b=0$
+1. Пусть $z=xy \in AB$ - произвольное.
+$\forall x \in A \forall y \in B x\geq a, y \geq b$
+значит $z=xy\geq ab=0$
+2. Пусть $\varepsilon >0, \varepsilon_1 > 0, \varepsilon_2 > 0$ - произвольные.
+Тогда $\exists x' \in A: x'<a+\varepsilon_1=\varepsilon_1$ и  $\exists y' \in A: y'<b+\varepsilon_2=\varepsilon_2$.
+Тогда $\exists z' \in AB: z'=x'y'<\varepsilon_1\varepsilon_2 =\varepsilon$,
+если выбрать $\varepsilon_1$ и $\varepsilon_2$ так, чтобы $\varepsilon_1 \varepsilon_2= \varepsilon$.
+Выберем $\varepsilon_1 =\varepsilon_2 =\sqrt{\varepsilon}$.
+
+#### 5
+$\sup AB = \sup A \cdot \sup \inf B$
+$AB=\{ xy | x \geq 0 \in A, y\geq 0 \in B\}$
+
+**Доказательство**
+Пусть $a=\sup A, b=\sup B$.
+**1)** $a=0 \lor b=0$
+Тогда $A=\{0\} \lor B=\{0\} \Rightarrow AB=\{0\} \Rightarrow \sup AB=0$.
+
+**2)** $a>0, b>0$
+1. Пусть $z=xy \in AB$ - произвольное.
+$\forall x \in A \forall y \in B x\leq a, y \leq b$
+значит $z=xy\leq ab$
+2. Пусть $\varepsilon >0, \varepsilon_1 > 0, \varepsilon_2 > 0$ - произвольные.
+Тогда $\exists x' \in A: x'>a-\varepsilon_1$ и  $\exists y' \in A: y'>b-\varepsilon_2$.
+Тогда $\exists z' \in AB: z'=x'y'>(a-\varepsilon_1)(b-\varepsilon_2)=ab-a\varepsilon_2-b\varepsilon_1+\varepsilon_1 \varepsilon_2 > ab-a\varepsilon_2-b\varepsilon_1 \geq ab-\varepsilon$,
+если выбрать $\varepsilon_1$ и $\varepsilon_2$ так, чтобы $a\varepsilon_2+b\varepsilon_1\leq \varepsilon$.
+Выберем $\varepsilon_1 = \max \{\frac{\varepsilon}{2b}; \frac{a}{2}\}$, $\varepsilon_2 = \min \{\frac{\varepsilon}{2a}; \frac{b}{2}\}$.
+
+
 # Лемма о верхней грани
 Всякое непустое ограниченное сверху подмножество множества вещественных чисел имеет и притом единственную точную верхнюю грань.
 
