add 2 theme beginning

--- a/1.md
+++ b/1.md
@@ -1,3 +1,5 @@
+Грани числовых множеств. Аксиома полноты множества действительных чи сел. Верхняя и нижняя грани числового множества. Ограниченное числовое мно жество. Точная верхняя и точная нижняя грани числового множества Лемма о верхней грани.
+
 # Грани числовых множеств
 Говорят, что множество $X \subset \mathbb{R}$ ограничено сверху (снизу), если существует число $c \in \mathbb{R}$ такое, что $x \leq c$ (соответственно, $c \leq x$) для любого $c \in X$.
 
