--- a/2.md
+++ b/2.md
@@ -1,7 +1,7 @@
 Предел числовой последовательности и общие свойства. Последовательность чисел. Предел числовой последовательности. Бесконечно малые и бесконечно большие последовательности. Понятие подпоследовательности. Свойства предела последовательности.
 
 # Предел числовой последовательности.
-*Последовательность* - это функция $f:\mathbb{N} \rightarrow X$, область которой является множество натуральных чисел. 
+*Последовательность* - это функция $f:\mathbb{N} \rightarrow X$, областью значений которой является множество натуральных чисел. 
 Значения $f(n)$ функции $f$ называются *членами последовательности*.
 Элемент $x_n$ называется $n-м$ *членом последовательности*.
 
@@ -21,11 +21,11 @@ $$(\lim\limits_{n \rightarrow \infty}{x_n} = A) := \forall \ V(A) \ \exists \ N 
 
 1. Последовательность не может иметь двух различных пределов.
 Доказательство:
-Пусть $\lim\limits_{n\rightarrow\infty}{x_n} = A_1$ и $\lim\limits_{n\rightarrow\infty}{x_n} = A_2$. Если $A_1 \cancel{=} A_2$, то зафиксируем непересекающиеся окрестности $V(A_1)$ и $V(A_2)$ от точек $A_1$ и $A_2$. В качестве окрестностей точек зафиксируем $\delta$ - окрестности таких, что $\delta < \frac{1}{2}|A_1 - A_2|$. По определению предела найдем числа $N_1$ и $N_2$ такие, что $\forall n \ > N_1$ ($x_n \in V(A_1))$ и $\forall n > N_2$ $(x_n \in V(A_2))$ (то есть найдем *infimum* обеих $\delta$ - окрестностей).
+Пусть $\lim\limits_{n\rightarrow\infty}{x_n} = A_1$ и $\lim\limits_{n\rightarrow\infty}{x_n} = A_2$. Если $A_1 \cancel{=} A_2$, то зафиксируем непересекающиеся окрестности $V(A_1)$ и $V(A_2)$ от точек $A_1$ и $A_2$. В качестве окрестностей точек зафиксируем $\delta$ - окрестности такие, что $\delta < \frac{1}{2}|A_1 - A_2|$. По определению предела найдем числа $N_1$ и $N_2$ такие, что $\forall n \ > N_1$ ($x_n \in V(A_1))$ и $\forall n > N_2$ $(x_n \in V(A_2))$ (то есть найдем *infimum* обеих $\delta$ - окрестностей).
 
 Тогда $\begin{cases} \exists N_1 : \forall n > N_1 \ |x_n - A_1| < \epsilon\\ \exists N_2 : \forall n > N_2 \ |x_n - A_2|<\epsilon \end{cases}$ 
 
-(пусть $\epsilon = \frac{|A_1 - A_2|}{2}$, (ну а почему бы и нет? у нас же  $\epsilon > 0$ должно выполняться определение предела, вот и выберем такой).
+(пусть $\epsilon = \frac{|A_1 - A_2|}{2}$, (ну а почему бы и нет? у нас же для всех  $\epsilon > 0$ должно выполняться определение предела, вот и выберем такой).
 
 Тогда при $n = max \{N_1 , N_2 \}$ (т.к. изначально мы рассматривали все эти $n$ по отдельности, то мы аналогично можем и рассмотреть их пересечение, то есть все $n$, которые больше как $N_1$, так и $N_2$). Тогда получится следующее выражение:
 $|A_1 - A_2|$ = $|(A_1 - x_n) + (x_n - A_2)|$ $\leq$ $|x_n - A_1| + |x_n - A_2|$ < $2\epsilon$ = $|A_1 - A_2|$ (т.к. ранее мы уже задали $\epsilon$ как $\frac{|A_1 - A_2|}{2}$.)
