--- a/2.md
+++ b/2.md
@@ -9,8 +9,8 @@
 (иначе говоря)
 Число $A \in \mathbb{R}$ называется *пределом последовательности* {$x_n$,}, если $$\forall \epsilon > 0 \  \exists \  N \mid \forall n > N : |x_n - A| < \epsilon$$  Обозначение: $\lim\limits_{n\rightarrow\infty}{x_n} = a$.
 
-Тогда формулировка предела на языке логической символини:
-$$(\lim\limits_{n \rightarrow \infty}{x_n} = A) := \forall \ V(A) \ \exists \ N \in \mathbb{R} \ \forall \ n > N \ : \ (|x_n - A| < \epsilon) $$
+Тогда формулировка предела на языке логической символики:
+$$(\lim\limits_{n \rightarrow \infty}{x_n} = A) := \forall \varepsilon > 0 \ \exists N \in \mathbb{R} \ \forall n > N \ \ (|x_n - A| < \epsilon) $$
 Последовательность, имеющая предел, называется *сходящейся*.
 Последовательность, **не** имеющая предела, называется *расходящейся*.
 Последовательность {$x_n$} называется *ограниченной*, если существует число $M$ такое, что $|x_n| < M$ при любом $n \in \mathbb{N}$.
@@ -27,7 +27,7 @@ $$(\lim\limits_{n \rightarrow \infty}{x_n} = A) := \forall \ V(A) \ \exists \ N 
 
 (пусть $\epsilon = \frac{|A_1 - A_2|}{2}$, (ну а почему бы и нет? у нас же для всех  $\epsilon > 0$ должно выполняться определение предела, вот и выберем такой).
 
-Тогда при $n = max \{N_1 , N_2 \}$ (т.к. изначально мы рассматривали все эти $n$ по отдельности, то мы аналогично можем и рассмотреть их пересечение, то есть все $n$, которые больше как $N_1$, так и $N_2$). Тогда получится следующее выражение:
-$|A_1 - A_2|$ = $|(A_1 - x_n) + (x_n - A_2)|$ $\leq$ $|x_n - A_1| + |x_n - A_2|$ < $2\epsilon$ = $|A_1 - A_2|$ (т.к. ранее мы уже задали $\epsilon$ как $\frac{|A_1 - A_2|}{2}$.)
+Тогда при $n = max \{N_1 , N_2 \}$ (т. к. изначально мы рассматривали все эти $n$ по отдельности, то мы аналогично можем и рассмотреть их пересечение, то есть все $n$, которые больше как $N_1$, так и $N_2$). Тогда получится следующее выражение:
+$|A_1 - A_2|$ = $|(A_1 - x_n) + (x_n - A_2)|$ $\leq$ $|x_n - A_1| + |x_n - A_2|$ < $2\epsilon$ = $|A_1 - A_2|$ (т. к. ранее мы уже задали $\epsilon$ как $\frac{|A_1 - A_2|}{2}$.)
 Тогда, оставив первый и последний элемент преобразований, получим:
-$|A_1 - A_2| < |A_1 - A_2|$ - очевидное противоречие $\Longrightarrow$ сходящаяся последовательность имеет тоьлко один предел.
+$|A_1 - A_2| < |A_1 - A_2|$ - очевидное противоречие $\Longrightarrow$ сходящаяся последовательность имеет только один предел.
