change the definition of limit of a sequence

--- a/2.md
+++ b/2.md
@@ -7,10 +7,10 @@
 
 *Предел числовой последовательности* - это такое число $A \in \mathbb{R}$, что для любой окрестности $V(A)$ точки $A$ существует такой номер $N$, что все члены последовательности, номера которых больше $N$, содержатся в указанной окрестности точки $A$.
 (иначе говоря)
-Число $A \in \mathbb{R}$ называется *пределом последовательности* {$x_n$,}, если $$\forall \epsilon > 0 \  \exists \  N \mid \forall n > N : |x_n - A| < \epsilon$$  Обозначение: $\lim\limits_{n\rightarrow\infty}{x_n} = a$.
+Число $A \in \mathbb{R}$ называется *пределом последовательности* {$x_n$,}, если $$ (\lim\limits_{n \rightarrow \infty}{x_n} = A) \coloneqq \forall V(A) \  \exists N \  \forall n > N \ (x_n \in V(A))$$  Обозначение: $\lim\limits_{n\rightarrow\infty}{x_n} = a$.
 
 Тогда формулировка предела на языке логической символики:
-$$(\lim\limits_{n \rightarrow \infty}{x_n} = A) := \forall \varepsilon > 0 \ \exists N \in \mathbb{R} \ \forall n > N \ \ (|x_n - A| < \epsilon) $$
+$$(\lim\limits_{n \rightarrow \infty}{x_n} = A) \coloneqq \forall \varepsilon > 0 \ \exists N \in \mathbb{N} \ \forall n > N \ \ (|x_n - A| < \epsilon) $$
 Последовательность, имеющая предел, называется *сходящейся*.
 Последовательность, **не** имеющая предела, называется *расходящейся*.
 Последовательность {$x_n$} называется *ограниченной*, если существует число $M$ такое, что $|x_n| < M$ при любом $n \in \mathbb{N}$.
